--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -2,7 +2,7 @@
 FROM python:3.12.4-alpine
 
 # set work directory
-# WORKDIR /usr/src/app
+WORKDIR /usr/src/app
 
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
@@ -10,14 +10,14 @@ ENV PYTHONUNBUFFERED 1
 
 # install dependencies
 RUN pip install --upgrade pip
-COPY ./requirements.txt /usr/src/app/requirements.txt
+COPY /requirements.txt /usr/src/app/requirements.txt
 RUN pip install -r requirements.txt
 
 # copy entrypoint.sh
-COPY ./entrypoint.sh /usr/src/app/entrypoint.sh
+COPY /entrypoint.sh /usr/src/app/entrypoint.sh
 
 # copy project
-COPY . /usr/src/app/
+COPY / /usr/src/app/
 
 # run entrypoint.sh
 ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
